haven't solved label node misalignment, try to change the instantiate order

--- a/examples/cosmo-example/style.css
+++ b/examples/cosmo-example/style.css
@@ -3,34 +3,29 @@
     width: 1000px;
     height: 600px;
     border: 1px solid #ccc;
-    overflow: visible;
-}
-  
-#graph { 
-    transform: none; 
-    position: relative;  
-    width: 100%; 
-    height: 100%; 
+    overflow: hidden;
 }
 
-#labels { 
-    position: absolute;  
-    inset: 0; 
-    pointer-events:none; 
-    z-index:1; 
+#graph {
+    position: relative;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+#labels {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 10;
 }
 
 * {
 font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+    system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+    "Open Sans", "Helvetica Neue", sans-serif;
 }
